[package]
name = "calculatrice_back"
version = "0.3.1"
description = "Calculator library (testing library DON'T use it)"
authors = ["LAURENT Louis <louis_laurent@aol.fr>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
